fixed overflow issue and implemented better wrapping in the divs

--- a/main/static/base.css
+++ b/main/static/base.css
@@ -36,7 +36,6 @@ div #title {
   background-color: #E4D19A;
   color: #331F04;
   width: 100%;
-  height: 1200px;
   -webkit-box-shadow: 0 0 24px #111111;
   border-radius: 20px; }
 #footer {
